Unified Gradle JVM options for importing and compiling Android projects.
This way we don't create separate Gradle daemons and use only one.

Change-Id: I06fba305c5c48782bf9a0b40d80a18e136c3df0a