@@ -23,6 +23,7 @@ import junit.framework.TestCase;
 import org.jetbrains.annotations.NotNull;
 
 import java.io.File;
+import java.util.List;
 
 /**
  * Tests for {@link BuilderExecutionSettings}.
@@ -64,8 +65,6 @@ public class BuilderExecutionSettingsTest extends TestCase {
 
   public void testConstructorWithValidVmArgs() {
     System.setProperty(BuildProcessJvmArgs.GRADLE_DAEMON_MAX_IDLE_TIME_IN_MS, "55");
-    System.setProperty(BuildProcessJvmArgs.GRADLE_DAEMON_MAX_MEMORY_IN_MB, "1024");
-    System.setProperty(BuildProcessJvmArgs.GRADLE_DAEMON_MAX_PERM_GEN_IN_MB, "512");
 
     String gradleHomeDirPath = myGradleHomeDir.getAbsolutePath();
     System.setProperty(BuildProcessJvmArgs.GRADLE_HOME_DIR_PATH, gradleHomeDirPath);
@@ -79,15 +78,27 @@ public class BuilderExecutionSettingsTest extends TestCase {
     System.setProperty(BuildProcessJvmArgs.USE_EMBEDDED_GRADLE_DAEMON, "true");
     System.setProperty(BuildProcessJvmArgs.USE_GRADLE_VERBOSE_LOGGING, "true");
 
+    System.setProperty(BuildProcessJvmArgs.GRADLE_DAEMON_VM_OPTION_COUNT, "2");
+
+    String xmx = "-Xmx2048m";
+    System.setProperty(BuildProcessJvmArgs.GRADLE_DAEMON_VM_OPTION_DOT + 0, xmx);
+
+    String maxPermSize = "-XX:MaxPermSize=512m";
+    System.setProperty(BuildProcessJvmArgs.GRADLE_DAEMON_VM_OPTION_DOT + 1, maxPermSize);
+
+
     BuilderExecutionSettings settings = new BuilderExecutionSettings();
     assertEquals(55, settings.getGradleDaemonMaxIdleTimeInMs());
-    assertEquals(1024, settings.getGradleDaemonMaxMemoryInMb());
-    assertEquals(512, settings.getGradleDaemonMaxPermGenInMb());
     assertEquals(gradleHomeDirPath, pathOf(settings.getGradleHomeDir()));
     assertEquals(gradleHomeServicePath, pathOf(settings.getGradleServiceDir()));
     assertEquals(projectDirPath, settings.getProjectDir().getAbsolutePath());
     assertTrue(settings.isEmbeddedGradleDaemonEnabled());
     assertTrue(settings.isVerboseLoggingEnabled());
+
+    List<String> vmOptions = settings.getGradleDaemonVmOptions();
+    assertEquals(2, vmOptions.size());
+    assertEquals(xmx, vmOptions.get(0));
+    assertEquals(maxPermSize, vmOptions.get(1));
   }
 
   private static String pathOf(@NotNull File dir) {
